Fix up environment.yml to handle cluster opencl & include the missing dask-jobqueue library

--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
 dependencies:
   - dask
+  - dask-jobqueue
   - pyclesperanto-prototype
-  - scikit-image
   - zarr
+  - ocl-icd-system
