add in delegate workflow processing on a per tile basis (rename main func as it was too generic, run is much better obviously)

--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,8 @@ dependencies:
   - python=3.10
   - dask
   - dask-jobqueue
-  - dasl-image
+  - dask-image
   - pyclesperanto-prototype
   - zarr
   - ocl-icd-system
+  - napari_workflows
